--- a/css/style.css
+++ b/css/style.css
@@ -1,218 +1,88 @@
+/* 全体のスタイル */
 body {
-  font-size: 16px;
-  width: 1200px;
-  background-color: #AAAAAA;
-  margin: auto;
-  border-left: #222;
-  border-right: #222;
-
-}
-
-/* #wrapper{
-width: 50%;
-background-color: #AAAAAA;
-  margin: auto;
-
-} */
-
-.header { 
-    width: 1200px;
-    height: 171px;
-    display:  flex;
-background-color:  gray;
-    color: red;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f0f0f0;
+  }
   
-}
- nav {
-  margin-left: auto;
-  font-size: 21px;
-}
-
-nav ul {
-  display: flex;
-}
-
-nav ul li {
-  padding: 50px 25px;
-
-  height: 71px;
-
-}
-
-ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  text-align: center
-}
-
-a {
-  padding-top: 100px;
-  margin-top: 100px;
-  color: white;
-  text-decoration: none;
-  text-align: center
-}
-
-h2{
-font-size: 20;
-text-align: center;
-color: rgb(183, 50, 50);
-
-}
-
-#orderSelect {
-  display: block;
-  width: 200px;
-  height: 100px;
-  margin:  0;
-  padding: 8px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 32px;
-  background-color: #fff;
-  box-shadow: none;
-  cursor: pointer;
-  align-items: center;
-}
-
-.section-title {
-  text-align: center;
-  display: block;
-  margin: 24px 0 0;
-  color: #222;
-  font-size: 1.6rem;
-  font-weight: bold;
-  margin: auto
-}
-
-.form {
-  width: 640px;
-  margin: auto;
-}
-
-.form-list {
-
-  margin-bottom: 30px;
-  padding-left: 0;
-  list-style: none;
-}
-
-.form-item {
-  display: flex;
-  align-items: center;
-  margin: 0 0 24px;
-}
-
-.form-item__radio {
-  align-items: flex-start;
-  margin: 40px 0 32px;
-}
-
-.form-item__textarea {
-  align-items: flex-start;
-  margin: 0 0 40px;
-}
-
-.form-label {
-  box-sizing: border-box;
-  display: block;
-  flex: 0 0 150px;
-  width: 120px;
-  margin: 0 24px 0 0;
-  text-align: right;
-  font-weight: bold;
-}
-
-.form-label__textarea {
-  padding-top: 16px;
-}
-
-.form-detail {
-  vertical-align: middle;
-}
-
-.form-parts {
-  appearance: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  width: 600px;
-  padding: 8px 8px;
-  border: solid 1px #AAAAAA;
-  border-radius: 0;
-  vertical-align: top;
-  font-size: 1.6rem;
-  box-sizing: border-box;
-}
-
-.form-choose {
-  padding-left: 0;
-  list-style: none;
-}
-
-.form-choose>li {
-  margin: 0 0 24px;
-  font-size: 1.4rem;
-  white-space: nowrap;
-}
-
-.form-choose>li:last-of-type {
-  margin-bottom: 0;
-}
-
-.form-radio {
-  appearance: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  width: 16px;
-  height: 16px;
-  margin: 0 24px 0 0;
-  border: none;
-  border-radius: 50%;
-  background-color: #EEEEEE;
-  vertical-align: -3px;
-}
-
-.btn-outer {
-  margin: 0;
-  text-align: center;
-}
-
-.btn {
-  appearance: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  display: block;
-  width: 264px;
-  margin: 0 auto;
-  padding: 22px 0;
-  border-radius: 0;
-  background-color: #ffd61a;
-  color: #fff;
-  font-size: 1.6rem;
-  text-align: center;
-  line-height: 1;
-  text-decoration: none;
-}
-
-.btn-submit {
-  border: none;
-  width: 298px;
-  padding: 18px 0;
-  margin-bottom: 100px;
-  font-size: 1.8rem;
-}
-
-.btn:hover {
-  background-color: #45a049;
-}
-
-.footer{
-	padding: 32px 0;
-	background: #707070;
-	font-size: 1.4rem;
-	color: #fff;
-}
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+  }
+  
+  /* ヘッダースタイル */
+  .navbar {
+    background-color: #000;
+    padding: 10px 0;
+  }
+  
+  .navbar-container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  
+  .navbar-brand {
+    color: #fff;
+    font-size: 18px;
+    margin-left: 20px;
+    text-decoration: none;
+  }
+  
+  /* フォームスタイル */
+  form {
+    max-width: 100%;
+    margin: 20px 0;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
+  
+  legend {
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+  }
+  
+  .form-group {
+    margin-bottom: 20px;
+  }
+  
+  label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+    color: #555;
+  }
+  
+  input[type="text"],
+  textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  input[type="button"] {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  /* レスポンシブデザイン */
+  @media screen and (max-width: 600px) {
+    .navbar-container {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    
+    .navbar-brand {
+      margin: 10px 0;
+    }
+  }
